Melhora cobertura de testes de mutação para Processo
Adiciona novos testes para cobrir cenários identificados pelo Pitest em ProcessoDetalheBuilder, ProcessoController e ProcessoInicializador.
Restaura configurações originais do build.gradle.kts para garantir integridade dos outros módulos.